# browsr

./: .gitignore  .pre-commit-config.yaml  .releaserc.js  404.html  LICENSE  LICENSE.txt  README.md  Taskfile.yaml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt
.github/: issue_template.md
.github/semantic_release/: release_notes.hbs
.github/workflows/: lint.yaml  publish.yaml  release.yaml  test.yaml  tests.yaml
api_documentation/: index.html
browsr/: __about__.py  __init__.py  __main__.py  _base.py  _cli.py  _config.py  _tools.py  _utils.py  _version.py  base.py  browsr.css  browsr.py  cli.py  code_browser.css  code_browser.py  config.py  exceptions.py  universal_directory_tree.py  utils.py
browsr/screens/: __init__.py  code_browser.py
browsr/widgets/: base.py  code_browser.py  confirmation.py  double_click_directory_tree.py  files.py  keys.py  shortcuts.py  universal_directory_tree.py  vim.py  windows.py
cli/: index.html
contributing/: index.html
docs/: api_documentation.md  cli.md  contributing.md  gen_ref_pages.py  index.md
docs/superpowers/plans/: 2026-03-24-textarea-integration.md  2026-03-30-keyboard-shortcuts-widget.md
docs/superpowers/specs/: 2026-03-24-textarea-implementation-design.md  2026-03-30-keyboard-shortcuts-widget-design.md
docs/superpowers/summaries/: 2026-03-30-keyboard-shortcuts-implementation.md
reference/: index.html
reference/SUMMARY/: index.html
reference/_base/: index.html
reference/_cli/: index.html
reference/_config/: index.html
reference/_tools/: index.html
reference/_utils/: index.html
reference/_version/: index.html
reference/browsr/: index.html
reference/universal_directory_tree/: index.html
requirements/: requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.13.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-prod.txt  requirements-test.txt
search/: search_index.json
tests/: conftest.py  debug_app.py  helpers.py  test_browsr.py  test_cli.py  test_config.py  test_screenshots.py  test_shortcuts.py  test_windows.py
tests/__snapshots__/: test_screenshots.ambr
tests/__snapshots__/test_screenshots/: test_github_screenshot.raw  test_github_screenshot_license.raw  test_mkdocs_screenshot.raw  test_shortcuts_screenshot.raw
tests/cassettes/: test_github_screenshot.yaml  test_github_screenshot_license.yaml  test_mkdocs_screenshot.yaml  test_shortcuts_screenshot.yaml  test_textual_app_context_path_github.yaml
