[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "art~=6.5",
  "click~=8.3.1",
  "pandas>2,<3",
  "rich>=14,<15",
  "rich-click~=1.9.7",
  "rich-pixels~=3.0.1",
  "textual>=8,<9",
  "textual-universal-directorytree~=1.6.0",
  "universal-pathlib~=0.2.6",
  "Pillow>=12.1.1",
  "pypdfium2>=5.6.0",
  "pyperclip~=1.11.0",
  "orjson~=3.11.5"
]
description = "TUI File Browser App"
keywords = []
license = "MIT"
name = "browsr"
readme = "README.md"
requires-python = ">=3.10"
version = "1.23.0"

[project.optional-dependencies]
all = [
  "pyarrow~=23.0.1",
  "textual-universal-directorytree[remote]~=1.6.0"
]
data = [
  "pyarrow~=23.0.1"
]
parquet = [
  "pyarrow~=23.0.1"
]
remote = [
  "textual-universal-directorytree[remote]~=1.6.0"
]

[project.scripts]
browsr = "browsr.__main__:browsr"

[project.urls]
Documentation = "https://github.com/juftin/browsr#readme"
Issues = "https://github.com/juftin/browsr/issues"
Source = "https://github.com/juftin/browsr"

[dependency-groups]
dev = [
  # Testing
  "pytest",
  "pytest-cov",
  "pytest-vcr~=1.0.2",
  "textual-dev~=1.4.0",
  "pytest-textual-snapshot",
  "pytest-asyncio",
  # Linting
  "mypy>=1.19.1",
  "ruff~=0.15.8"
]
docs = [
  "markdown-callouts==0.4.0",
  "markdown-exec==1.8.0",
  "mkdocs==1.5.3",
  "mkdocs-autorefs==v1.0.1",
  "mkdocs-click==0.9.0",
  "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.1",
  "mkdocs-material==9.5.14",
  "mkdocs-section-index==0.3.8",
  "mkdocstrings==0.24.1",
  "mkdocstrings-python==1.9.0",
  "pymdown-extensions==10.7.1",
  "griffe==v0.42.1",
  "pygments==2.19.2"
]

[tool.coverage.paths]
browsr = ["browsr", "*/browsr/browsr"]
tests = ["tests", "*/browsr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
branch = true
omit = ["browsr/__about__.py"]
parallel = true
source_pkgs = ["browsr", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = [
  "-v",
  "--cov=browsr",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--junitxml=pytest.xml"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Boolean-typed positional argument in function definition
  "FBT001",
  # Boolean default positional argument in function definition
  "FBT002",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Exception must not use a string literal, assign to variable first
  "EM101"
]
select = [
  "A",  # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EM",  # flake8-errmsg
  "F",  # Pyflakes
  "FBT",  # flake8-boolean-trap
  "I",  # isort
  "ICN",  # flake8-import-conventions
  "N",  # pep8-naming
  "PLC",  # Pylint (Convention message)
  "PLE",  # Pylint (Error message)
  "PLR",  # Pylint (Refactor message)
  "PLW",  # Pylint (Warning message)
  "Q",  # flake8-quotes
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "T",  # flake8-debugger (T10) and flake8-print (T20)
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
  "YTT"  # flake8-2020
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["browsr"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
